fix: button small font size

--- a/packages/ui/src/assets/scss/_buttons.scss
+++ b/packages/ui/src/assets/scss/_buttons.scss
@@ -56,6 +56,7 @@
 
     &.small {
       padding: 8px 16px;
+      font-size: var(--#{$prefix}font-size-sm);
 
       &.circle {
         border-radius: 50%;
@@ -101,6 +102,7 @@
 
     &.small {
       padding: 8px 16px;
+      font-size: var(--#{$prefix}font-size-sm);
 
       &.circle {
         border-radius: 50%;
